<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".view.addStory.AddStoryActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_place_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:elevation="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintBottom_toTopOf="@id/locationButton"
        app:layout_constraintEnd_toStartOf="@id/galleryButton" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:elevation="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/cameraButton"
        app:layout_constraintTop_toBottomOf="@id/previewImageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/cameraButton"
        app:layout_constraintTop_toBottomOf="@id/cameraButton"
        app:layout_constraintEnd_toEndOf="@id/cameraButton" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:text="@string/location_hint"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:lineSpacingMultiplier="1"
        android:elevation="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/locationButton"
        app:layout_constraintTop_toBottomOf="@id/galleryButton"
        app:layout_constraintBottom_toBottomOf="@id/locationButton"
        app:layout_constraintEnd_toEndOf="@id/galleryButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationButton"
        app:layout_constraintBottom_toTopOf="@id/uploadButton">

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:ems="10"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginTop="25dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditTextLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/tangerine"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>